[package]
name = "thread_local"
version = "0.2.3"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Per-object thread-local storage"
documentation = "https://amanieu.github.io/thread_local-rs/thread_local/index.html"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/thread_local-rs"
readme = "README.md"
keywords = ["thread_local", "concurrent", "thread"]

[dependencies]
thread-id = "2.0"
