[package]
name = "thread_local"
version = "1.1.4"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Per-object thread-local storage"
documentation = "https://docs.rs/thread_local/"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/thread_local-rs"
readme = "README.md"
keywords = ["thread_local", "concurrent", "thread"]
edition = "2018"

[badges]
travis-ci = { repository = "Amanieu/thread_local-rs" }

[dependencies]
once_cell = "1.5.2"

[target.'cfg(bench)'.dev-dependencies]
# to activate, pass RUSTFLAGS="--cfg bench" until cargo does this automatically
criterion = "0.3.3"

[[bench]]
name = "thread_local"
harness = false
